adjust proto, write tests for NewPerson, FindMainCards; fix incorrect source card
